[package]
name = "commit-groth09"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An implementation of the commitment scheme described in 'Homomorphic Trapdoor Commitments to Group Elements' by Jens Groth, implemented using BLS12-381."
homepage = "https://github.com/Gabaa/commit-groth09"
repository = "https://github.com/Gabaa/commit-groth09"
readme = "README.md"
keywords = ["cryptography", "commitments"]
categories = ["cryptography"]

[dependencies]
bls12_381 = "0.8.0"
ff = "0.13.0"
group = "0.13.0"
rand = "0.8.5"
